--- a/styles.css
+++ b/styles.css
@@ -119,8 +119,6 @@ span.size-20 {
 #color-box {
   width: 12px;
   height: 12px;
-  border: 1px solid rgb(215, 215, 215);
-  background-color: black;
   border-radius: 4px;
 }
 
@@ -128,4 +126,15 @@ span.size-20 {
   background-color: rgb(230, 189, 189);
   color: azure;
   border: 1px solid rgb(115, 63, 63);
+}
+
+#color-button {
+  display: flex;
+  width: 30px;
+  height: 28px;
+  padding: 2px 4px;
+  border: 1px solid rgb(212, 212, 212);
+  border-radius: 6px;
+  align-items: center;
+  background-color: var(--frame--color);
 }
