--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@
 
 html {
   height: 100%;
+   -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+     -khtml-user-select: none; 
+       -moz-user-select: none; 
+        -ms-user-select: none; 
+            user-select: none;
 }
 
 #frame {
@@ -132,9 +138,9 @@ span.size-20 {
   display: flex;
   width: 30px;
   height: 28px;
-  padding: 2px 4px;
+  padding: 4px 4px;
   border: 1px solid rgb(212, 212, 212);
-  border-radius: 6px;
+  border-radius: 4px;
   align-items: center;
   background-color: var(--frame--color);
 }
