--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
   --grid-width: 600px;
   --inactive-color: rgba(121, 121, 153, 0.442);
-  --accent-color: rgb(113, 113, 122); 
+  --accent-color: rgb(113, 113, 122);
   --active-button-color: rgb(221, 221, 221);
   --frame--color: rgba(238, 238, 238, 0.859);
 }
@@ -16,13 +16,29 @@
 
 html {
   height: 100%;
-   -webkit-touch-callout: none; 
-    -webkit-user-select: none; 
-     -khtml-user-select: none; 
-       -moz-user-select: none; 
-        -ms-user-select: none; 
-            user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh; */
 }
+
+/* @keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+} */
 
 #frame {
   display: flex;
@@ -60,6 +76,7 @@ html {
   overflow: hidden;
   border: 1px solid rgba(147, 147, 147, 0.691);
   touch-action: none;
+  cursor: crosshair;
 }
 
 .grid-pixel {
@@ -77,11 +94,11 @@ button {
 }
 
 button:hover {
-  background-color: var( --active-button-color);
+  background-color: var(--active-button-color);
 }
 
 button > span {
-  color: var(--accent-color)
+  color: var(--accent-color);
 }
 
 button:hover > span {
@@ -143,4 +160,11 @@ span.size-20 {
   border-radius: 4px;
   align-items: center;
   background-color: var(--frame--color);
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  opacity: 15%;
+  width: 100vw;
 }
